# vehicle_dynamics_sim

./: .clang-format  .env  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  create_dot_env  docker-compose.yml  extending_the_simulator.md  layout.rviz  plotjuggler_layout.xml
.colcon/: defaults.yaml
src/: robot_state_publisher
src/nav2_example/: CMakeLists.txt  README.md  package.xml
src/nav2_example/launch/: navigation.launch.py  serve_map.launch.xml
src/nav2_example/params/: nav2.yaml
src/vehicle_dynamics_sim/: CMakeLists.txt  README.md  package.xml
src/vehicle_dynamics_sim/config/: all_vehicles.yaml
src/vehicle_dynamics_sim/include/vehicle_dynamics_sim/: Pose2D.h  Pose2D.hpp  conversions.h  conversions.hpp  declare_and_get_parameter.h  declare_and_get_parameter.hpp  localization.h  localization.hpp  sim.h  sim.hpp  urdf.h  utils.h  utils.hpp  vehicles.h  vehicles.hpp
src/vehicle_dynamics_sim/launch/: robot_state_publisher.launch.py  sim.launch.xml
src/vehicle_dynamics_sim/params/: all_vehicles.yaml
src/vehicle_dynamics_sim/scripts/: publish_some_velocities
src/vehicle_dynamics_sim/src/: Pose2D.cpp  conversions.cpp  declare_and_get_parameter.cpp  localization.cpp  sim.cpp  sim_node.cpp  urdf.cpp  vehicles.cpp
src/vehicle_dynamics_sim/test/: README.md  test_Pose2D.cpp  test_all.cpp  test_sim.cpp  test_smoke.py  test_utils.cpp  test_vehicles.cpp  test_vehicles.py  test_vehicles_bicycle_front_steer_front_drive.py  test_vehicles_bicycle_front_steer_rear_drive.py  test_vehicles_bicycle_rear_steer_front_drive.py  test_vehicles_bicycle_rear_steer_rear_drive.py  test_vehicles_differential.py  test_vehicles_omni.py
