<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_example</name>
  <version>0.0.0</version>
  <description>Example of using vehicle_dynamics_sim with Nav2</description>
  <maintainer email="mail@arnebaeyens.com">Arne Baeyens</maintainer>
  <license>MIT</license>
  <author email="mail@arnebaeyens.com">Arne Baeyens</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2</depend>
  <depend>nav2_bringup</depend>
  <depend>vehicle_dynamics_sim</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
